--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "scripts": {
-    "format": "./node_modules/.bin/prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"src/**/*.{js,jsx}\""
+    "format": "./node_modules/.bin/prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"src/**/*.{js,jsx}\"",
+    "lint": "./node_modules/.bin/eslint \"**/*.{js,jsx}\" --quiet"
   },
   "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
     "prettier": "^1.15.3"
   }
 }
